# falcon-auth2

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: run-test.yaml
docs/: conf.py  index.rst  user_guide.rst
docs/api/: backends.rst  exceptions.rst  getters.rst  index.rst  middleware.rst  utils.rst
example/: readme_example.py  readme_example_async.py
examples/: readme_example.py  readme_example_async.py
falcon_auth2/: __init__.py  compat.py  exc.py  getter.py  middleware.py  utils.py
falcon_auth2/backends/: __init__.py  base.py  basic.py  jwt.py  meta.py
falcon_auth2/utils/: __init__.py  asyncio_compat.py  classes.py  compat.py  functions.py
test/: conftest.py  requirements.txt  test_exc.py  test_getter.py  test_middleware.py  test_utils.py
test/backends/: conftest.py  test_base.py  test_basic.py  test_jwt.py  test_meta.py
test/utils/: test_asyncio_compat.py  test_utils.py
