[egg_info]
tag_build = dev

[metadata]
license_file = LICENSE
description-file = README.rst

[flake8]
max-line-length = 103
per-file-ignores =
  **/__init__.py: F401

[tool:pytest]
addopts=-v -r sfxX --maxfail=25 -p no:warnings -p no:logging --no-cov-on-fail --cov-report html --cov-report term
python_files=test/*test_*.py

[coverage:run]
branch = True
source = falcon_auth2

[coverage:report]
show_missing = True
