[metadata]
name = falcon-auth2
version = attr: falcon_auth2.__version__
description = Falcon authentication middleware that supports multiple authentication types.
long_description = file: README.md
long_description_content_type = text/markdown
author = Federico Caselli
author_email = cfederico87+pypi@gmail.com
url = https://github.com/CaselIT/falcon-auth2
license = Apache-2.0,
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware
    Topic :: Software Development :: Libraries :: Python Modules
keywords = 
    falcon
    web
    api
    middleware
    auth
    authentication
project_urls =
    Documentation = https://falcon-auth2.readthedocs.io
    Issue Tracker = https://github.com/CaselIT/falcon-auth2/issues

[options]
packages = find:
python_requires = >=3.6
install_requires =
    falcon >= 2

[options.packages.find]
include =
    falcon_auth2

[egg_info]
tag_build = dev

[flake8]
max-line-length = 103
per-file-ignores =
    **/__init__.py: F401

[tool:pytest]
addopts=-v -r sfxX --maxfail=25 -p no:warnings -p no:logging --no-cov-on-fail --cov-report html --cov-report term
python_files=test/*test_*.py

[coverage:run]
branch = True
source = falcon_auth2

[coverage:report]
show_missing = True
